
 [01 Migrated to Sub::Exporter::Progressive]
 - No fancy stuff is really required internally, so a lighter weight Sub::Exporter::Progressive is now in use.

 [Dependencies::Stats]
 - Dependencies changed since 0.6.0, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +50 -1 (recommends: -1, suggests: +1 ↑1)
 - runtime: +1 ↓1 -1
 - test: +2 ↓1 -2 (recommends: +3)

0.6.0 2012-10-27T12:27:17Z
 [00 IMPORTANT CHANGES]
 - $perlver being undef now is an error.
 - All error code is now refactored into the ::Error class, which ultimately grants more flexibility and better code
   organisation.
 - %ENV interaction is now handled vis a few utility functions in the ::Env class.
 - Functions in ::Env and ::Error are proxied into the ::Version class via some lazy-load functions.

 [Dependencies::Stats]
 - Dependencies changed since 0.5.0, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: (suggests: ↑1)
 - test: +1 ↑1

 [Documentation]
 - Miscelaneous improvements, s/method/func/, and more general coverage of some error functions.

0.5.0 2012-06-08T12:08:07Z
 [00 IMPORTANT CHANGES]
 - Errors that occur when a version fails to validate have changed in some circumstances.
 - Now reports the version token that failed to validate.
 - laxness can be overridden globally via new GENTOO_PERLMOD_VERSION_OPTS=" always_lax=$n "
 - user provided data can now be stripped from error output by GENTOO_PERLMOD_VERSION_OPTS=" taint_safe "
 - carp messages can be more verbose about context/options by setting GENTOO_PERLMOD_VERSION_OPTS=" carp_debug "

 [Dependencies::Stats]
 - Dependencies changed since 0.4.0, see misc/*.deps* for details
 - develop: (recommends: ↑1, suggests: ↑1)

 [Internals]
 - Carp now loaded on-demand.
 - List::MoreUtils now loaded on demand, which is good, because its only used at lax = 2
 - croak is proxied via _fatal() which takes lots more information.

0.4.0 2012-03-01T08:37:02Z
 [00 IMPORTANT CHANGES]