@@ -152,13 +152,27 @@ sub _format_error {
   if ( exists $conf->{'message_extra_tainted'} ) {
     $message .= $conf->{'message_extra_tainted'};
   }
+  if ( exists $conf->{'stack'} ) {
+    for ( @{ $conf->{stack} } ) {
+      if ( $_->[0] !~ /\AGentoo::PerlMod::Version(?:|::Error|::Env)\z/msx ) {
+        $message .= sprintf qq[\n - From %s in %s at line %s\n], $_->[0] || q[], $_->[1] || q[], $_->[2] || q[];
+        last;
+      }
+    }
+  }
   return $message;
 }
+
+use overload q[""] => \&_format_error;
 
 sub _fatal {
   my ($conf) = @_;
   require Carp;
-  return Carp::croak( _format_error($conf) );
+  $conf->{stack} = [
+    map { [ $_->[0], $_->[1], $_->[2], ] }
+    map { [ caller $_, ] } 0 .. 10,
+  ];
+  return Carp::croak( bless $conf, __PACKAGE__ );
 }
 
 1;
