@@ -14,8 +14,16 @@
  - build: -1
  - configure: +1 -1 (recommends: +1)
  - develop: +50 -1 (recommends: -1, suggests: +1 ↑1)
- - runtime: +1 ↓1 -1
+ - runtime: +2 ↓1 -1
  - test: +2 ↓1 -2 (recommends: +3)
+
+ [Internals]
+ - Fatal Exceptions don't lose their context as soon as they're thrown.
+ - However, backtraces are subsequently slightly impeded.
+ - Use Devel::Cover for full backtraces.
+
+ [Metadata]
+ - recognize 1x contributor
 
 0.6.0 2012-10-27T12:27:17Z
  [00 IMPORTANT CHANGES]
